[package]
name = "immut"
version = "0.1.1"
edition = "2024"
description = "Immutable all the things!"
repository = "https://github.com/raviqqe/immut"
license-file = "./LICENSE"

[[bench]]
harness = false
name = "main"

[dependencies]
pretty_assertions = "1.4.1"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7.2" }

[lints.clippy]
alloc_instead_of_core = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
option_if_let_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
todo = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unused_self = "deny"
use_self = "deny"

[lints.rust]
missing_docs = "deny"
warnings = "deny"
